--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>5.5-dars</title>
+    <title>Music Player</title>
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
@@ -14,34 +14,32 @@
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
-    <div class="music-container" id="music-container">
+    <div id="music-container" class="music-container">
+      <div class="music-info">
+        <h4 id="title">Music Title</h4>
+        <div class="progress-container" id="progress-container">
+          <div class="progress" id="progress"></div>
+        </div>
+      </div>
+      <audio id="audio" src="./sounds/Konsta-Bilmaydi.mp3"></audio>
       <img
-        class="cover"
         id="cover"
         src="./images/Konsta-Bilmaydi.jpg"
-        alt="Album Cover"
+        alt="Music Cover"
         width="200"
-        height="200"
+        height="300"
       />
-      <h2 id="title">Konsta-Bilmaydi</h2>
-      <audio id="audio" src="./sounds/Konsta-Bilmaydi.mp3"></audio>
-
-      <div class="progress-container">
-        <div class="progress"></div>
+      <div class="navigation">
+        <button id="backward"><i class="fa-solid fa-backward"></i></button>
+        <button id="play"><i class="fa-solid fa-play"></i></button>
+        <button id="forward"><i class="fa-solid fa-forward"></i></button>
       </div>
-
-      <div class="control-buttons">
-        <button id="backward">
-          <i class="fa-solid fa-backward"></i>
-        </button>
-        <button id="play">
-          <i class="fa-solid fa-play"></i>
-        </button>
-        <button id="forward">
-          <i class="fa-solid fa-forward"></i>
-        </button>
+      <div class="volume-control">
+        <input type="range" id="volume" min="0" max="100" value="50" />
+        <span id="volume-value">50</span>
       </div>
     </div>
-    <script src="./music.js"></script>
+
+    <script type="module" src="./music.js"></script>
   </body>
 </html>
